--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "autoprefixer": "^9.8.6",
     "concat": "^1.0.3",
+    "live-server": "^1.2.2",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.2"
